@@ -286,6 +286,30 @@ else
   AC_SUBST(PYLDNSXUNINST, "")
 fi
 
+# check for perl
+ldns_with_p5_net_ldns=no
+AC_ARG_WITH(p5-net-ldns, AC_HELP_STRING([--with-p5-net-ldns], 
+ [generate Net::LDNS perl bindings]), 
+ [],[ withval="no" ])
+ldns_have_perl=no
+if test x_$withval != x_no; then
+   AC_PATH_PROG([PERL], [perl])
+   if test -z "$PERL"; then
+      AC_MSG_ERROR([Cannot find perl in your system path])
+   fi
+   AC_SUBST(P5_NET_LDNS, "p5-net-ldns")dnl
+   AC_SUBST(TEST_P5_NET_LDNS, "test-p5-net-ldns")dnl
+   AC_SUBST(INSTALL_P5_NET_LDNS, "install-p5-net-ldns")dnl
+   AC_SUBST(UNINSTALL_P5_NET_LDNS, "uninstall-p5-net-ldns")dnl
+   AC_SUBST(CLEAN_P5_NET_LDNS, "clean-p5-net-ldns")
+else
+   AC_SUBST(P5_NET_LDNS, "")dnl
+   AC_SUBST(TEST_P5_NET_LDNS, "")dnl
+   AC_SUBST(INSTALL_P5_NET_LDNS, "")dnl
+   AC_SUBST(UNINSTALL_P5_NET_LDNS, "")dnl
+   AC_SUBST(CLEAN_P5_NET_LDNS, "")
+fi
+
 # Use libtool
 ACX_LIBTOOL_C_ONLY
 
